cleaned up buildfiles